# betterthreads

./: .gitmodules  CMakeLists.txt  LICENSE
.github/workflows/: coverage.yml  unix.yml  win.yml
include/: buffer.hpp  buffered_thread.hpp  concurrency_typedefs.hpp  macros.hpp  task_manager.hpp  templates.hpp  thread.hpp  thread_manager.hpp  thread_pool.hpp  typedefs.hpp  using.hpp  utility.hpp  workload.hpp  workload_advancement.hpp  workload_interface.hpp
src/: CMakeLists.txt  buffered_thread.cpp  task_manager.cpp  thread.cpp  thread_manager.cpp  thread_pool.cpp  workload_advancement.cpp
submodules/: CMakeLists.txt
test/: CMakeLists.txt  test.hpp  test_buffer.cpp  test_buffered_thread.cpp  test_task_manager.cpp  test_thread.cpp  test_thread_manager.cpp  test_thread_pool.cpp  test_workload.cpp  test_workload_advancement.cpp
